        - Message Reactions (XEP-0444)
    * Improvements:
        - muc::user::Item: Added with_ helpers
        - Correct cargo doc warnings
        - Presence now has constructors for each variant so you don't have to import presence::Type, where Presence::available represents type None (#79)
        - Presence::with_payload builds a payload into the presence (#79)
    * Breaking changes:
        - Removed the 'serde' feature. Add it directly by using 'jid'.
        `jid = { version = "*", features = ["serde"] }`.

Version 0.19.2:
2022-12-17  Maxime “pep” Buquet <pep@bouah.net>
    * Improvements:
        - Derive PartialEq on Presence
        - impl PresencePayload for muc::user::MucUser.
        - New muc::user::Status::ServiceErrorKick variant for the 333 status
          code.
        - Update deprecated chrono code (FixedOffset::{east,west} to
          {east,west}_opt).

Version 0.19.1:
2022-07-13  Emmanuel Gil Peyrot <linkmauve@linkmauve.fr>
    * New parsers/serialisers:
        - Add In-Band Real Time Text support
        - Add OMEMO support
    * Improvements:
        - bookmarks 2: uncomment test

Version 0.19.0:
2022-03-07  Emmanuel Gil Peyrot <linkmauve@linkmauve.fr>
    * New parsers/serialisers:
        - External Service Discovery (XEP-0215).
        - HTTP File Upload (XEP-0363).
        - Message Archive Management Preferences (XEP-0441), actually spun off
          from XEP-0313.
    * Improvements:
        - Add constructor helpers for more structs.
        - Impl Eq and Hash on disco::Feature (thanks Paul!).
        - Impl MessagePayload for PubSubEvent (thanks Paul!).
        - Bump minidom to 0.14.
        - Bump the hash crates to their latest version.
        - Run clippy.
        - Rename the directory to parsers, to avoid colliding prefix with
          xmpp-rs.
    * Breaking changes:
        - Bump bookmarks 2 to version 1.1.3.
        - Use proper types in Jingle specs (XEP-0294 and XEP-0339).